// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SearchResultsItem should match snapshot for DM 1`] = `
<div
  className="search-item__container"
  data-testid="search-item-container"
>
  <Connect(DateSeparator)
    date={2017-12-14T18:15:28.290Z}
  />
  <div
    className="post post--thread post--compact"
  >
    <div
      className="search-channel__name"
    >
      <FormattedMessage
        defaultMessage="Direct Message (with {username})"
        id="search_item.direct"
        values={
          Object {
            "username": "Other guy",
          }
        }
      />
    </div>
    <div
      className="post__content"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={true}
          post={
            Object {
              "channel_id": "channel_id",
              "create_at": 1502715365009,
              "delete_at": 0,
              "edit_at": 1502715372443,
              "id": "id",
              "is_pinned": true,
              "message": "post message",
              "original_id": "",
              "parent_id": "",
              "pending_post_id": "",
              "props": Object {},
              "root_id": "",
              "type": "",
              "update_at": 1502715372443,
              "user_id": "user_id",
            }
          }
          userId="user_id"
        />
      </div>
      <div>
        <div
          className="post__header"
        >
          <div
            className="col col__name"
          >
            <Connect(UserProfile)
              disablePopover={false}
              isRHS={true}
              userId="user_id"
            />
            <BotBadge
              className=""
              show={false}
            />
          </div>
          <div
            className="col"
          >
            <Connect(PostTime)
              eventTime={1502715365009}
              isPermalink={true}
              location="SEARCH"
              postId="id"
            />
            <span
              className="post__pinned-badge"
            >
              <FormattedMessage
                defaultMessage="Pinned"
                id="post_info.pinned"
                values={Object {}}
              />
            </span>
            <Connect(PostFlagIcon)
              isFlagged={true}
              location="SEARCH"
              postId="id"
            />
          </div>
          <div
            className="col__controls col__reply"
          >
            <Connect(DotMenu)
              handleDropdownOpened={[Function]}
              isFlagged={true}
              isReadOnly={null}
              location="SEARCH"
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": true,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
            <CommentIcon
              commentCount={0}
              extraClass=""
              handleCommentClick={[Function]}
              location="SEARCH"
              postId="id"
              searchStyle="search-item__comment"
            />
            <a
              className="search-item__jump"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Jump"
                id="search_item.jump"
                values={Object {}}
              />
            </a>
          </div>
        </div>
        <div
          className="search-item-snippet post__body"
        >
          <div
            className=" post--edited"
          >
            <Connect(PostBodyAdditionalContent)
              options={
                Object {
                  "searchMatches": undefined,
                  "searchTerm": "test",
                }
              }
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": true,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            >
              <Connect(PostMessageView)
                options={
                  Object {
                    "mentionHighlight": false,
                    "searchMatches": undefined,
                    "searchTerm": "test",
                  }
                }
                post={
                  Object {
                    "channel_id": "channel_id",
                    "create_at": 1502715365009,
                    "delete_at": 0,
                    "edit_at": 1502715372443,
                    "id": "id",
                    "is_pinned": true,
                    "message": "post message",
                    "original_id": "",
                    "parent_id": "",
                    "pending_post_id": "",
                    "props": Object {},
                    "root_id": "",
                    "type": "",
                    "update_at": 1502715372443,
                    "user_id": "user_id",
                  }
                }
              />
            </Connect(PostBodyAdditionalContent)>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SearchResultsItem should match snapshot for archived channel 1`] = `
<div
  className="search-item__container"
  data-testid="search-item-container"
>
  <Connect(DateSeparator)
    date={2017-12-14T18:15:28.290Z}
  />
  <div
    className="post post--thread post--compact"
  >
    <div
      className="search-channel__name"
    >
      channel_name
      <span
        className="search-channel__archived"
      >
        <ArchiveIcon
          className="icon icon__archive channel-header-archived-icon svg-text-color"
        />
        <FormattedMessage
          defaultMessage="Archived"
          id="search_item.channelArchived"
          values={Object {}}
        />
      </span>
    </div>
    <div
      className="post__content"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={true}
          post={
            Object {
              "channel_id": "channel_id",
              "create_at": 1502715365009,
              "delete_at": 0,
              "edit_at": 1502715372443,
              "id": "id",
              "is_pinned": false,
              "message": "post message",
              "original_id": "",
              "parent_id": "",
              "pending_post_id": "",
              "props": Object {},
              "root_id": "",
              "type": "",
              "update_at": 1502715372443,
              "user_id": "user_id",
            }
          }
          userId="user_id"
        />
      </div>
      <div>
        <div
          className="post__header"
        >
          <div
            className="col col__name"
          >
            <Connect(UserProfile)
              disablePopover={false}
              isRHS={true}
              userId="user_id"
            />
            <BotBadge
              className=""
              show={false}
            />
          </div>
          <div
            className="col"
          >
            <Connect(PostTime)
              eventTime={1502715365009}
              isPermalink={true}
              location="SEARCH"
              postId="id"
            />
            <Connect(PostFlagIcon)
              isFlagged={true}
              location="SEARCH"
              postId="id"
            />
          </div>
          <div
            className="col__controls col__reply"
          >
            <Connect(DotMenu)
              handleDropdownOpened={[Function]}
              isFlagged={true}
              isReadOnly={true}
              location="SEARCH"
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": false,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
            <CommentIcon
              commentCount={0}
              extraClass=""
              handleCommentClick={[Function]}
              location="SEARCH"
              postId="id"
              searchStyle="search-item__comment"
            />
            <a
              className="search-item__jump"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Jump"
                id="search_item.jump"
                values={Object {}}
              />
            </a>
          </div>
        </div>
        <div
          className="search-item-snippet post__body"
        >
          <div
            className=" post--edited"
          >
            <Connect(PostBodyAdditionalContent)
              options={
                Object {
                  "searchMatches": undefined,
                  "searchTerm": "test",
                }
              }
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": false,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            >
              <Connect(PostMessageView)
                options={
                  Object {
                    "mentionHighlight": false,
                    "searchMatches": undefined,
                    "searchTerm": "test",
                  }
                }
                post={
                  Object {
                    "channel_id": "channel_id",
                    "create_at": 1502715365009,
                    "delete_at": 0,
                    "edit_at": 1502715372443,
                    "id": "id",
                    "is_pinned": false,
                    "message": "post message",
                    "original_id": "",
                    "parent_id": "",
                    "pending_post_id": "",
                    "props": Object {},
                    "root_id": "",
                    "type": "",
                    "update_at": 1502715372443,
                    "user_id": "user_id",
                  }
                }
              />
            </Connect(PostBodyAdditionalContent)>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SearchResultsItem should match snapshot for channel 1`] = `
<div
  className="search-item__container"
  data-testid="search-item-container"
>
  <Connect(DateSeparator)
    date={2017-12-14T18:15:28.290Z}
  />
  <div
    className="post post--thread post--compact"
  >
    <div
      className="search-channel__name"
    >
      channel_name
    </div>
    <div
      className="post__content"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={true}
          post={
            Object {
              "channel_id": "channel_id",
              "create_at": 1502715365009,
              "delete_at": 0,
              "edit_at": 1502715372443,
              "id": "id",
              "is_pinned": false,
              "message": "post message",
              "original_id": "",
              "parent_id": "",
              "pending_post_id": "",
              "props": Object {},
              "root_id": "",
              "type": "",
              "update_at": 1502715372443,
              "user_id": "user_id",
            }
          }
          userId="user_id"
        />
      </div>
      <div>
        <div
          className="post__header"
        >
          <div
            className="col col__name"
          >
            <Connect(UserProfile)
              disablePopover={false}
              isRHS={true}
              userId="user_id"
            />
            <BotBadge
              className=""
              show={false}
            />
          </div>
          <div
            className="col"
          >
            <Connect(PostTime)
              eventTime={1502715365009}
              isPermalink={true}
              location="SEARCH"
              postId="id"
            />
            <Connect(PostFlagIcon)
              isFlagged={true}
              location="SEARCH"
              postId="id"
            />
          </div>
          <div
            className="col__controls col__reply"
          >
            <Connect(DotMenu)
              handleDropdownOpened={[Function]}
              isFlagged={true}
              isReadOnly={null}
              location="SEARCH"
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": false,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
            <CommentIcon
              commentCount={0}
              extraClass=""
              handleCommentClick={[Function]}
              location="SEARCH"
              postId="id"
              searchStyle="search-item__comment"
            />
            <a
              className="search-item__jump"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Jump"
                id="search_item.jump"
                values={Object {}}
              />
            </a>
          </div>
        </div>
        <div
          className="search-item-snippet post__body"
        >
          <div
            className=" post--edited"
          >
            <Connect(PostBodyAdditionalContent)
              options={
                Object {
                  "searchMatches": undefined,
                  "searchTerm": "test",
                }
              }
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "id": "id",
                  "is_pinned": false,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {},
                  "root_id": "",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            >
              <Connect(PostMessageView)
                options={
                  Object {
                    "mentionHighlight": false,
                    "searchMatches": undefined,
                    "searchTerm": "test",
                  }
                }
                post={
                  Object {
                    "channel_id": "channel_id",
                    "create_at": 1502715365009,
                    "delete_at": 0,
                    "edit_at": 1502715372443,
                    "id": "id",
                    "is_pinned": false,
                    "message": "post message",
                    "original_id": "",
                    "parent_id": "",
                    "pending_post_id": "",
                    "props": Object {},
                    "root_id": "",
                    "type": "",
                    "update_at": 1502715372443,
                    "user_id": "user_id",
                  }
                }
              />
            </Connect(PostBodyAdditionalContent)>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SearchResultsItem should match snapshot for deleted message 1`] = `
<div
  className="search-item__container"
  data-testid="search-item-container"
>
  <Connect(DateSeparator)
    date={2017-12-14T18:15:28.290Z}
  />
  <div
    className="post post--thread post--compact"
  >
    <div
      className="search-channel__name"
    >
      channel_name
    </div>
    <div
      className="post__content"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={true}
          post={
            Object {
              "channel_id": "channel_id",
              "create_at": 1502715365009,
              "delete_at": 0,
              "edit_at": 1502715372443,
              "file_ids": Array [
                "id",
                "id2",
              ],
              "id": "id",
              "is_pinned": false,
              "message": "post message",
              "original_id": "",
              "parent_id": "",
              "pending_post_id": "",
              "props": Object {
                "from_webhook": true,
                "override_username": "overridden_username",
              },
              "root_id": "",
              "state": "DELETED",
              "type": "",
              "update_at": 1502715372443,
              "user_id": "user_id",
            }
          }
          userId="user_id"
        />
      </div>
      <div>
        <div
          className="post__header"
        >
          <div
            className="col col__name"
          >
            <Connect(UserProfile)
              disablePopover={true}
              isRHS={true}
              overwriteName="overridden_username"
              userId="user_id"
            />
            <BotBadge
              className=""
              show={true}
            />
          </div>
          <div
            className="col"
          >
            <Connect(PostTime)
              eventTime={1502715365009}
              isPermalink={false}
              location="SEARCH"
              postId="id"
            />
          </div>
        </div>
        <div
          className="search-item-snippet post__body"
        >
          <div
            className=" post--edited"
          >
            <p>
              <FormattedMessage
                defaultMessage="(message deleted)"
                id="post_body.deleted"
                values={Object {}}
              />
            </p>
            <Connect(FileAttachmentList)
              compactDisplay={true}
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "file_ids": Array [
                    "id",
                    "id2",
                  ],
                  "id": "id",
                  "is_pinned": false,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {
                    "from_webhook": true,
                    "override_username": "overridden_username",
                  },
                  "root_id": "",
                  "state": "DELETED",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SearchResultsItem should match snapshot for deleted message with attachments by bot 1`] = `
<div
  className="search-item__container"
  data-testid="search-item-container"
>
  <Connect(DateSeparator)
    date={2017-12-14T18:15:28.290Z}
  />
  <div
    className="post post--thread post--compact"
  >
    <div
      className="search-channel__name"
    >
      channel_name
    </div>
    <div
      className="post__content"
      role="application"
    >
      <div
        className="post__img"
      >
        <Connect(PostProfilePicture)
          compactDisplay={true}
          post={
            Object {
              "channel_id": "channel_id",
              "create_at": 1502715365009,
              "delete_at": 0,
              "edit_at": 1502715372443,
              "file_ids": Array [
                "id",
                "id2",
              ],
              "id": "id",
              "is_pinned": false,
              "message": "post message",
              "original_id": "",
              "parent_id": "",
              "pending_post_id": "",
              "props": Object {
                "from_webhook": true,
                "override_username": "overridden_username",
              },
              "root_id": "",
              "state": "deleted",
              "type": "",
              "update_at": 1502715372443,
              "user_id": "user_id",
            }
          }
          userId="user_id"
        />
      </div>
      <div>
        <div
          className="post__header"
        >
          <div
            className="col col__name"
          >
            <Connect(UserProfile)
              disablePopover={true}
              isRHS={true}
              overwriteName="overridden_username"
              userId="user_id"
            />
            <BotBadge
              className=""
              show={true}
            />
          </div>
          <div
            className="col"
          >
            <Connect(PostTime)
              eventTime={1502715365009}
              isPermalink={true}
              location="SEARCH"
              postId="id"
            />
          </div>
        </div>
        <div
          className="search-item-snippet post__body"
        >
          <div
            className=" post--edited"
          >
            <p>
              <FormattedMessage
                defaultMessage="(message deleted)"
                id="post_body.deleted"
                values={Object {}}
              />
            </p>
            <Connect(FileAttachmentList)
              compactDisplay={true}
              post={
                Object {
                  "channel_id": "channel_id",
                  "create_at": 1502715365009,
                  "delete_at": 0,
                  "edit_at": 1502715372443,
                  "file_ids": Array [
                    "id",
                    "id2",
                  ],
                  "id": "id",
                  "is_pinned": false,
                  "message": "post message",
                  "original_id": "",
                  "parent_id": "",
                  "pending_post_id": "",
                  "props": Object {
                    "from_webhook": true,
                    "override_username": "overridden_username",
                  },
                  "root_id": "",
                  "state": "deleted",
                  "type": "",
                  "update_at": 1502715372443,
                  "user_id": "user_id",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
